--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,12 @@ main {
 header h1 {
   text-align: center;
 }
+
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 25px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 15px;
+}
