--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ header h1 {
   display: flex;
   justify-content: space-around;
   margin-top: 25px;
+  margin-bottom: 25px;
   border: 1px solid #ccc;
   border-radius: 4px;
   padding: 15px;
